# aipa

./: README.md  env.example  pyproject.toml  requirements.txt  run.py  setup.py
app/: __init__.py  main.py
app/api/: __init__.py  endpoints.py  models.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  integrated_policy_engine.py  policy_engine.py
app/integrations/: __init__.py
app/integrations/llama_stack/: __init__.py  safety_api.py
app/models/: __init__.py
app/utils/: __init__.py  policy_loader.py
data/: company_policy.txt
data/policies/: sample_policy.txt
scripts/: download_llama_model.py
src/: __main__.py
src/api/: main.py  models.py
src/core/: cli.py  config.py  env_example.py
src/policy/: loader.py
src/rag/: engine.py
tests/: deployment-compliant.yaml  deployment-with-violations.yaml
