[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipa"
version = "0.1.0"
description = "AI Policy Advisor - A RAG-based policy engine using llama-stack"
authors = [
    {name = "AI Policy Advisor Team"}
]
requires-python = ">=3.10"
dependencies = [
    "llama-index>=0.9.0",
    "llama-stack-client>=0.1.0",
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "python-dotenv>=1.0.0",
    "langchain>=0.0.267",
    "pydantic>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.7.0",
    "isort>=5.12.0",
] 